Fixed hero slider on firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,6 @@ body {
   width: 100%;
   height: 531px;
   background-size: cover;
-  display: flex;
   position: relative;
   text-align: center;
 }
