--- a/scss/_basic.scss
+++ b/scss/_basic.scss
@@ -168,7 +168,6 @@ body {
     width: 100%;
     height: 531px;
     background-size: cover;
-    display: flex;
     position: relative;
     text-align: center;
 
